--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,15 +15,19 @@ dependencies:
   easy_localization: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_native_splash: ^2.4.2
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.13
   google_fonts: ^6.2.1
+  http: ^1.2.2
+  image_picker: ^1.1.2
   injectable: ^1.5.3
   injectable_generator: ^1.5.3
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
-  flutter_lints: ^4.0.0
+  # flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
