--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   image_picker: ^1.1.2
   injectable: ^1.5.3
   injectable_generator: ^1.5.3
+  permission_handler: ^11.3.1
   pin_code_fields: ^8.0.1
-
+  curved_navigation_bar:
 dev_dependencies:
-  # flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
