--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,9 @@ dependencies:
   injectable_generator: ^1.5.3
   permission_handler: ^11.3.1
   pin_code_fields: ^8.0.1
+  audio_waveforms: ^1.0.4
   curved_navigation_bar:
+  flame_audio: ^2.10.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -39,6 +41,8 @@ flutter:
     - assets/translations/
     - assets/images/profile/
     - assets/images/onboarding/
+    - assets/images/placeholder/
+    - assets/audio/
 
 # Move flutter_native_splash to top level
 flutter_native_splash:
